err/omero-figure.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/omero_figure'...
Listing './lib/python3.5/site-packages/omero_figure/scripts'...
Listing './lib/python3.5/site-packages/omero_figure/scripts/omero'...
Listing './lib/python3.5/site-packages/omero_figure/scripts/omero/figure_scripts'...
Listing './lib/python3.5/site-packages/omero_figure/static'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/backbone.mousetrap'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-3.0.0'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-3.0.0/css'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-3.0.0/fonts'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-3.0.0/js'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-colorpicker'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-colorpicker/css'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-colorpicker/img'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-colorpicker/img/bootstrap-colorpicker'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/bootstrap-colorpicker/js'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/markdown-browser-0.6.0-beta1'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/mousetrap-1.5.3'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/raphael-2.1.2'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/3rdparty/shape-editor-3.0.0'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/css'...
Listing './lib/python3.5/site-packages/omero_figure/static/figure/images'...
Listing './lib/python3.5/site-packages/omero_figure/templates'...
Listing './lib/python3.5/site-packages/omero_figure/templates/figure'...
Compiling './lib/python3.5/site-packages/omero_figure/views.py'...
***   File "./lib/python3.5/site-packages/omero_figure/views.py", line 460
    except ImportError, ex:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/omero_figure-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
